# acquire-framework.github.io

./: .gitignore  .quartoignore  CITATION.cff  CONTRIBUTING.md  LICENSING.md  README.md  _quarto.yml  acqsite.py  cite.html  cite.llms.md  cite.qmd  index.html  index.llms.md  index.qmd  licensing.html  licensing.llms.md  licensing.qmd  llms.txt  pyproject.toml  references.bib  search.json  sitemap.xml  versions.html  versions.llms.md  versions.qmd
LICENSES/: MIT.txt
acquire/: __init__.py  cli.py  report.py  schema.py  synth.py
check/: index.html  index.llms.md  index.qmd
checklist/: acquire-checklist.yml  acquire-mrc.yml  extended.html  extended.llms.md  extended.qmd  index.html  index.llms.md  index.qmd
lifecycle/: curate.html  curate.llms.md  curate.qmd  deploy.html  deploy.llms.md  deploy.qmd  design.html  design.llms.md  design.qmd  index.html  index.llms.md  index.qmd  instrument.html  instrument.llms.md  instrument.qmd  monitor.html  monitor.llms.md  monitor.qmd  pilot.html  pilot.llms.md  pilot.qmd  release.html  release.llms.md  release.qmd
recipes/: 01-clock-drift.html  01-clock-drift.llms.md  01-clock-drift.qmd  02-unit-scale-mismatch.html  02-unit-scale-mismatch.llms.md  02-unit-scale-mismatch.qmd  03-doze-downsampling.html  03-doze-downsampling.llms.md  03-doze-downsampling.qmd  04-stuck-sensor.html  04-stuck-sensor.llms.md  04-stuck-sensor.qmd  05-range-saturation.html  05-range-saturation.llms.md  05-range-saturation.qmd  index.html  index.llms.md  index.qmd
spec/: spec.yml
styles/: instrument.scss
taxonomy/: acquire-taxonomy.yml  index.html  (+2 more)
(+190 files in other folders)
